--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4022,3 +4022,9 @@ input, select, textarea {
 .slider-nav a:hover {
 	opacity: 1;
 }
+
+.small-using {
+	font-size: smaller;
+	font-weight: lighter;
+	font-family: 'Courier New', Courier, monospace;
+}
